include allowed operations from PublicationPermissionStrategy